first part of game

--- a/lib/localization/langs/am.json
+++ b/lib/localization/langs/am.json
@@ -1,3 +1,9 @@
 {
-  "hi": "Բարև"
+  "About": "Խաղի մասին",
+  "Language": "Լեզու",
+  "hi": "Բարև",
+  "ALIAS": "ԱԼԻԱՍ",
+  "PANTAMIMA": "ՊԱՆՏԱՄԻՄԱ",
+  "BLIPEL": "ԲԼԻՊԵԼ",
+  "START": "ՍԿՍԵԼ"
 }
