--- a/lib/localization/langs/en.json
+++ b/lib/localization/langs/en.json
@@ -1,3 +1,9 @@
 {
-  "hi": "hi"
+  "About": "About",
+  "Language": "Language",
+  "hi": "hi",
+  "ALIAS": "ALIAS",
+  "PANTAMIMA": "PANTAMIMA",
+  "BLIPEL": "BLIPEL",
+  "START": "START"
 }
