--- a/lib/localization/langs/ru.json
+++ b/lib/localization/langs/ru.json
@@ -1,3 +1,9 @@
 {
-  "hi": "Привет"
+  "About": "Об игре",
+  "Language": "Язык",
+  "hi": "Привет",
+  "ALIAS": "АЛИАС",
+  "PANTAMIMA": "ПАНТАМИМА",
+  "BLIPEL": "БЛИПЕЛ",
+  "START": "НАЧАТЬ"
 }
