Alias interim version

--- a/lib/localization/langs/am.json
+++ b/lib/localization/langs/am.json
@@ -5,5 +5,8 @@
   "ALIAS": "ԱԼԻԱՍ",
   "PANTAMIMA": "ՊԱՆՏԱՄԻՄԱ",
   "BLIPEL": "ԲԼԻՊԵԼ",
-  "START": "ՍԿՍԵԼ"
+  "START": "ՍԿՍԵԼ",
+  "NEXT": "ՀԱՋՈՐԴԸ",
+  "ACCEPT": "ԸՆԴՈւՆԵԼ",
+  "FAIL" : "ՁԱԽՈՂՈՒՄ",
 }
