--- a/lib/localization/langs/ru.json
+++ b/lib/localization/langs/ru.json
@@ -5,5 +5,8 @@
   "ALIAS": "АЛИАС",
   "PANTAMIMA": "ПАНТАМИМА",
   "BLIPEL": "БЛИПЕЛ",
-  "START": "НАЧАТЬ"
+  "START": "НАЧАТЬ",
+  "NEXT": "СЛЕДУЮЩИЙ",
+  "ACCEPT":"ПРИНИМАТЬ",
+  "FAIL": "ПРОВАЛ"
 }
